--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
+edition = "2018"
 name = "cli"
 version = "0.1.0"
-edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = "2.33.3"
