--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -5,5 +5,8 @@ version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+crate-type = ["cdylib"]
+
 [dependencies]
-indradb-lib = "2.1.0"
+petgraph = "0.6.0"
